# ttrpg-maps

./: .dockerignore  .gitignore
.github/workflows/: build.yaml
backend/: README.md  pyproject.toml
backend/migrations/: 000_initial_schema.py  001_add_visible_to_pois.py  002_remove_step_index.py  003_migrate_path_index.py
backend/src/: config.py  db.py  main.py  models.py  observability.py  poi_store.py  security.py
backend/src/data/: pois.json
backend/src/routes/: frontend.py  health.py  pois.py
backend/tests/: conftest.py  test_e2e.py  test_migrations.py  test_poi_routes.py  test_poi_store.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  config.test.ts  config.ts  hexUtils.test.ts  hexUtils.ts  types.ts
frontend/src/components/: DetailDrawer.test.tsx  DetailDrawer.tsx  MapView.test.tsx  MapView.tsx  PoiMarker.test.tsx  PoiMarker.tsx
frontend/src/hooks/: usePoiWebSocket.test.tsx  usePoiWebSocket.ts
frontend/src/test/mocks/: MockWebSocket.ts
